[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fonts/custom_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/images/items/apple.png" type="Texture" id=2]
[ext_resource path="res://assets/images/shadows/SmallShadow.png" type="Texture" id=3]
[ext_resource path="res://scripts/entities/droppeditem.gd" type="Script" id=4]
[ext_resource path="res://assets/sounds/item_general.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="Animation" id=2]
resource_name = "item bop"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -3 ), Vector2( 0, 0 ) ]
}

[node name="ItemDrop" type="Area2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource( 4 )

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 0.347954, 7.65486 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.115982, 0 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.298321, 0.0994415 )
texture = ExtResource( 2 )
offset = Vector2( 0, -0.3 )

[node name="Quantity" type="Label" parent="Sprite"]
margin_left = 4.04975
margin_top = 3.64478
margin_right = 20.0498
margin_bottom = 19.6448
rect_scale = Vector2( 0.2, 0.2 )
custom_fonts/font = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/item bop" = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="pickup_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
bus = "sfx"

[connection signal="body_entered" from="." to="." method="_on_ItemDrop_body_entered"]
[connection signal="finished" from="pickup_sound" to="." method="_on_pickup_sound_finished"]
